# coursework_4

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: send_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_message_options_and_more.py  0003_alter_mailing_date_end_message_and_more.py  0004_mailing_is_active.py  0005_remove_mailing_is_active.py  0006_alter_mailing_status.py  0007_alter_mailingattempt_status.py  0008_mailing_owner_mailingattempt_owner_message_owner_and_more.py  0009_alter_mailingattempt_options.py
mailing/templates/: base.html  home.html  mailing_attempt_list.html  mailing_create.html  mailing_delete.html  mailing_detail.html  mailing_list.html  message_create.html  message_delete.html  message_detail.html  message_list.html  recipient_create.html  recipient_delete.html  recipient_detail.html  recipient_list.html
mailing/templates/includes/: footer.html  inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_customsuser_token.py
users/templates/: login.html  register.html
