[tool.poetry]
name = "coursework-4"
version = "0.1.0"
description = ""
authors = ["alexandra kashina <kashin159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
flake8 = "^7.1.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
